# audiobook-toolchain

./: .gitignore  AGENTS.md  README.md  pyproject.toml
audiobook_toolchain/: README.md  cues.py  normalize.py  workflow.py
corpus/: Iamblichlus.Life.of.Pythagorus.epub  autition.txt  thomas.txt
laban_tts/: cues.py  normalize.py  workflow.py
tests/: conftest.py  test_cues_primer.py  test_normalize_split.py  test_tts_llm_segment.py
