[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook-toolchain"
version = "0.1.0"
description = "Cue-driven audiobook toolchain (normalize → cue → synthesize)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Generative Agents Team" }
]
keywords = ["tts", "audiobook", "cue scripts", "laban", "chatterbox-tts", "langchain"]
dependencies = [
  "fire",
  "loguru",
  "pydantic",
  "pydantic-xml",
  "langchain-core",
  "langchain-openai",
  "langchain-text-splitters",
  "tiktoken",
  "unstructured[md]",
  "pydub",
]

[project.optional-dependencies]
# tts = [
#   "chatterbox-tts @ git+https://github.com/resemble-ai/chatterbox.git",
#   "pykakasi==2.3.0",
#   "pkuseg==0.0.25",
# ]
dev = [
  "pytest",
  "pytest-asyncio",
  "pyright",
  "black",
]

[tool.setuptools]
packages = ["audiobook_toolchain"]

[tool.pyright]
include = ["audiobook_toolchain", "tests"]
exclude = ["**/node_modules", "**/__pycache__", "lib"]
strict = true

[tool.uv]
override-dependencies = [
  "langchain>=1.0.0a6",
  "langgraph>=1.0.0a4",
  "langchain-openai>=1.0.0a3",
]

[tool.uv.pip]
prerelease = "allow"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
