[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laban-tts"
version = "0.1.0"
description = "Voice acting driven audiobook synthesis using LLM generated cue scripts."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Santu Mariani<santumariani@proton.me>" }
]
keywords = ["tts", "audiobook", "cue scripts", "laban profiles", "chatterbox-tts", "langchain"]
dependencies = [
  "fire",
  "loguru",
  "pydantic",
  "pydantic-xml",
  "langchain-core",
  "langchain-openai",
  "langchain-text-splitters",
  "tiktoken",
  "unstructured[md]",
  "pydub",
]

[project.optional-dependencies]
chatterbox = [
  "chatterbox-tts==0.1.4",
  "pykakasi==2.3.0",  
  "pkuseg==0.0.25",
]
docs = [
  "unstructured[pdf,epub,huggingface,docx,image,rst]", # See unstructured docs for OS dependencies.
]
dev = [
  "pytest",
  "pytest-asyncio",
  "pyright",
  "black",
]

[tool.setuptools]
packages = ["laban_tts"]

[tool.pyright]
include = ["laban_tts", "tests"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "basic"

[tool.uv]
override-dependencies = [
  "langchain>=1.0.0a6",
  "langgraph>=1.0.0a4",
  "langchain-openai>=1.0.0a3",
]

[tool.uv.pip]
prerelease = "allow"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
